= 2.3.5 = * Fixed an issue when the user agent server variable is not set. * Reporter Lens: Improved the reliability of and Lazy Loading when using crossfade. * Fixed a potential file inclusion vulnerability reported by one of our users. * Added the ability to filter the admin roles for SlideDeck with: `add_filter( 'slidedeck_roles', 'function' );`
git-svn-id: https://plugins.svn.wordpress.org/slidedeck2/trunk@800083 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/languages/slidedeck.pot
+++ b/languages/slidedeck.pot
@@ -630,7 +630,7 @@ msgid "Fetching Latest Tweets..."
 msgstr ""
 
 #: ../views/manage.php:131
-msgid "A product of"
+msgid "Made by"
 msgstr ""
 
 #: ../views/manage.php:132
